Fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -306,7 +306,7 @@ br {
 
   .more_info {
     width: 550%;
-    margin: 15px 20px;
+    margin: 15px 18px;
     display: flex;
     justify-content: center;
   }
@@ -367,6 +367,7 @@ br {
   .section-social a {
     text-decoration: none;
     color: #f0f0f0;
+    margin: 5px 5px 5px 5px;
   }
 
   .nav-list li a {
